<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <Button
        android:id="@+id/_btnShowCollection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/str_show_collection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/_btnAddToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="80dp"
        android:text="@string/str_add_to_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/_btnShowCollection"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/_btnShowCollection"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="184dp"
        android:layout_height="213dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533">
        <!--Had to use the SwitchCompat below because the default switch has a different styler for older android and newer android
the old one for kitkat used to be like an on & off switch the new one is as you see it now This is what I found in my research anyway!-->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/_swCardGame"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_card_game"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/_swRPG"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_RPG" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/_swBoardGame"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_board_game" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/_swDiceGame"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_dice_game" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="198dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/_etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_title"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:counterEnabled="true"
            app:counterMaxLength="150"
            app:counterOverflowTextColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/_etDescription"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_description"
                android:textColor="@color/purple_700"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="115dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/_btnShowCollection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.148">

        <ImageView
            android:id="@+id/_imgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_view_content_desc"
            android:visibility="invisible"
            app:srcCompat="@drawable/board_game" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>




